big change in parameter passing with this update. hashes and lists can be passed into yote without needing to be yote objects. conversely, a future update will change it so the reverse is also true

--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -203,6 +203,8 @@
                   var line = yote.fetch( line_id );
                   curScene.update( [{ current_product_line : line }] );
               } );
+              activateUpdateFields();
+
           } //setup_scenario
 
           function setup_product(prd) {
