--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -16,10 +16,6 @@
                   // tie the calcResult field of the app to an informative hourCost div
                   var app = yote.fetch_app( 'CalcTest' );
 
-                  app.addUpdateListener( function( appo ) {
-                      $( '#hourCost' ).val( appo.get('calcResult') );
-                  } );
-
                   function updateScenes() {
                       // redo select
                       var $sel = $( '#scenario_sel' );
@@ -37,11 +33,36 @@
                       }
                   }
 
+                  function updateProdLines() {
+                      var cs = currScene.get( 'product_lines' );
+                      return;
+                      var lines = currScene.get( 'product_lines' ).toArray();
+                      $('#products').empty();
+                      for( var i=0; i<lines.length; i++ ) {
+                          var line = lines[i];
+                          $('#products').append( '<div>' +
+                                                 '<button type="delAction product-line" data-parent="' + currScene.id + '" data-id="' + line.id + '">Delete</button>' + 
+                                                 'Name <input class="updateField product-line" data-id="' + line.id + '" data-field="name" type="text"> <br>' + 
+                                                 'Desc <input class="updateField product-line" data-id="' + line.id + '" data-field="Description" type="text"> <br>' + 
+
+                                                 '</div>' );
+
+                      }
+                  }
+
                   function selectScene( scene ) {
                       $( '#sceneName' ).val( scene.get('name') );
                       $( "#scenario_sel" ).val( scene.id );
                       app.setCurrentScene( scene ); //yes, this is async and that's okey
-                      currScene = scene;
+                      yote.callWorker( {
+                          callpath : 'select_scene',
+                          params : scene,
+                          callback : function( resp ) {
+                              currScene = scene;
+                              updateProdLines();
+                          }
+                      } );
+                      
 
                       $( '.scenario.updateField' ).each( function() {
                           var $this = $( this );
@@ -58,7 +79,7 @@
 
                   $( "#del_scene" ).on('click',function() {
                       if( confirm( "Really delete scene " + currScene.get('name') ) ) {
-                          app.delete_scene( currScene, function() {
+                          app.drop_scene( [currScene], function() {
                               updateScenes();
                               selectScene( app.get( 'current_scene' ) );
                           } );
@@ -69,9 +90,9 @@
                   $( "#new_product" ).on('click',function() {
                       yote.callWorker( {
                           callpath : 'new_product',
-                          callback : function( news ) {
-                              updateScenes();
-                              selectScene( news );
+                          callback : function(newline) {
+                              updateProdLines();
+                              selectLine( newline );
                           }
                       } );
                   } )
@@ -113,12 +134,28 @@
                           }
                       } );
                   } );
+                  app.addUpdateListener( function( appo ) {
+                      $( '#hourCost' ).val( appo.get('calcResult') );
+                  } );
+
                   // OLD ^^^^^^^^^^^^^--------------------
 
                   updateScenes();
                   var sels = app.get( 'scenarios' ).toArray();
                   var currScene = app.get('current_scene' );
                   selectScene( currScene );
+
+                  $( '.delAction' ).on( 'click', function(ev) {
+                      var $this = $(this);
+                      var meth  = $this.data( 'call' );
+                      var par   = yote.fetch($this.data( 'parent' ));
+                      var obj   = yote.fetch($this.data( 'id' ));
+                      par[meth]( [obj], function() {
+                          updateScenes();
+                          var currScene = app.get('current_scene' );
+                          selectScene( currScene );
+                      } );
+                  } );
 
                   $( '.updateField' ).on( 'keypress', function(ev) {
                       if( ev.keyCode == 13 || ev.charCode == 13 ) {
@@ -161,7 +198,7 @@
     <h4>Products</h4>
     <button type="button" id="new_product">Create New Product Line</button>
     <div id="products">
-
+      No Products
     </div>
 </div>
 
