fixed nasty yote.js bug where updates listeners would fire before all updates were injested, sometimes trying to interact with updates that were not yet injested

--- a/samp/html/demo.html
+++ b/samp/html/demo.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Calcy Testy</title>
+    <title>Production Simulator</title>
     <script src="/__/js/yote.js"></script>
     <script src="/__/js/jquery-1.12.0.min.js"></script>
     <script>
@@ -18,7 +18,6 @@
                           ev.preventDefault();
                       }
                   } );
-
                   app.gather( [], function() {
                       setup_app( app );
                   } );
@@ -55,10 +54,6 @@
               $( '.' + cls + ',.'+cls+'-child' ).each( function() {
                   var $this = $(this);
 
-                  if( $this.is( 'select' ) && $this.data( 'id' ) != obj.id ) {
-                      // special casey thing to regenerate select controls
-                      $this.removeClass( 'build-select' );
-                  }
                   if( $this.hasClass( cls+'-child' ) ) {
                       $this.data( 'parent', obj.id );
                   }
@@ -85,19 +80,17 @@
                   }
                   return;
               }
-              key = 'set-' + key + '-listener';
               $( selector ).each( function(idx,val) {
                   var $this = $( val );
-                  if( $this.data('imp') ) { try {asfd();}catch(e){} }
                   if( ! $.contains( $('#templates')[0], val ) ) {
-                      if( ! $this.data( key ) && $this.data('id') ) {
+                      if( (! $this.data( key ) || $this.data( 'redo' ) ) && $this.data('id') ) {
+                          $this.data( 'redo', false );
                           $this.data( key, true );
                           fun( $this );
                       }
                   }
               } );
           }
-
 
           function activateControls()  {
               modifyControl( 'div.updateFieldControl', 'updateField-setup', function( $ctrl ) {
@@ -233,7 +226,7 @@
                           }
                           fillOptions();
                           updateListener( source_obj, 'select-chooser-build-select', function() {
-                              var key = 'set-build-select-listener';
+                              var key = 'build-select';
                               $ctrl.data( key, false );
                               activateControls();
                           }, false );
@@ -243,7 +236,7 @@
                       list = listO.toArray();
                       fillOptions();
                       updateListener( listO, 'select-chooser-build-select', function() {
-                          var key = 'set-build-select-listener';
+                          var key = 'build-select';
                           $ctrl.data( key, false );
                           activateControls();
                       }, false );
@@ -418,6 +411,11 @@
                   }
               }, true );
 
+              $( '#scene_sel' ).off( 'change' ).on( 'click', function() {
+                  $('#del_scene').removeClass( 'delClick' );
+                  activateControls();
+              } )
+
               energize( 'app', app );
           } //setup_app
 
@@ -486,10 +484,17 @@
                       curProd = scenario.get( 'current_product_line' );
                       var key = 'set-build-select-listener';
                       $( '#prod_sel' ).data( key, false );
+                      if( curProd ) {
+                          $( '.product' ).data('redo',true );
+                          energize( 'product', curProd );
+                      }
                       setup_product( curProd );
+
                   }
               }, true );
 
+              $( '.scenario' ).data('redo',true );
+              
               energize( 'scenario', scenario );
           } //setup_scenario
 
@@ -501,8 +506,7 @@
               }
 
               var comps = prd.get( 'available_components' );
-              updateListener( comps, '_matslist_' + prd.id, function() {
-                  alert( 'update' );
+              updateListener( comps, '_matslist', function() {
                   setup_table( {
                       tabSel : '#components-tab',
                       rowSel : '#components-row',
@@ -609,7 +613,7 @@
     <p id="scenario_picker">
       Selected Scenario <select class="showField updateField app" data-field="current_scenario"
                                 data-var-is="object" data-src-field="scenarios" id="scene_sel"></select>
-      <a href="" class="delAction app-child scenario" data-needs-confirmation="y" data-from="scenarios" data-delete-message="Really delete this scenario?">(Delete this Scenario)</a>
+      <a href="" class="delAction app-child scenario" data-needs-confirmation="y" data-from="scenarios" data-delete-message="Really delete this scenario?" id="del_scene">(Delete this Scenario)</a>
     </p>
 
     <h3>Scenario</h3>
