--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -21,6 +21,7 @@
                           ev.preventDefault();
                       }
                   } );
+                  setup_app( app );
               }
           } );
 
@@ -420,7 +421,6 @@
               } );
 
           } //setup_app
-
 
       } //init
 -->
